# liteparse

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  MARKDOWN_PLAN.md  MARKDOWN_PROGRESS.md  Makefile  README.md  full.Dockerfile  musl_build_cargozig.md
.github/workflows/: ci-node.yml  ci-python.yml  ci-wasm.yml  ci.yml  e2e-output.yml  ocr_servers.yml  pages.yml  release-crates.yml  release-docker.yml  release-node.yml  release-python.yml  release-wasm.yml  sync-docs.yml
crates/liteparse/: Cargo.toml  build.rs
crates/liteparse-napi/: Cargo.toml  build.rs
crates/liteparse-napi/src/: lib.rs  types.rs
crates/liteparse-python/: Cargo.toml  build.rs
crates/liteparse-python/src/: cli.rs  lib.rs
crates/liteparse-wasm/: Cargo.toml
crates/liteparse-wasm/src/: lib.rs  wasi_stubs.rs
crates/liteparse/src/: config.rs  conversion.rs  extract.rs  figure_cluster.rs  font_db_resolver.rs  glyph_resolver.rs  lib.rs  main.rs  markdown_layout.rs  ocr_merge.rs  parser.rs  projection.rs  render.rs  types.rs
crates/liteparse/src/markdown_layout/: classify.rs  headings.rs  tables.rs
crates/liteparse/src/ocr/: http_simple.rs  mod.rs  tesseract.rs
crates/liteparse/src/output/: json.rs  markdown.rs  mod.rs  text.rs
crates/pdfium/: Cargo.toml
crates/pdfium-sys/: Cargo.toml  build.rs
crates/pdfium-sys/src/: dynamic.rs
crates/pdfium/src/: bitmap.rs  document.rs  error.rs  font.rs  lib.rs  library.rs  page.rs  text_page.rs
dataset_eval_utils/: pyproject.toml
dataset_eval_utils/src/liteparse_eval/: benchmark.py  evaluation.py
dataset_eval_utils/src/liteparse_eval/providers/: __init__.py
dataset_eval_utils/src/liteparse_eval/providers/parsers/: __init__.py  liteparse.py  opendataloader.py  pdftotext.py  pymupdf4llm_md.py  pymupdf4llm_text.py
docs/src/content/docs/liteparse/: cli-reference.md  getting_started.mdx  index.md
docs/src/content/docs/liteparse/guides/: agent-skill.md  browser-usage.md  library-usage.mdx  multi-format.md  ocr.md  parsing-urls.md  visual-citations.mdx
ocr/easyocr/: server.py
ocr/paddleocr/: server.py
scripts/: build-musl-node.sh  build-musl-py.sh  bump-version.py  compare-dataset.sh  compare-outputs.sh  create-dataset.sh  generate-api-docs.sh  smoke-test-musl-node.sh  strip-impls-from-api-docs.py  upload-dataset.sh
scripts/browser-compat/: wasm-test.html  wasm-test.mjs
wasm-demo-site/: index.html
