[workspace]
resolver = "2"
members = [
    "crates/pdfium-sys",
    "crates/pdfium",
    "crates/liteparse",
    "crates/liteparse-napi",
    "crates/liteparse-python",
    "crates/liteparse-wasm",
]

[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/run-llama/liteparse"
