[project]
name = "liteparse-eval"
version = "0.1.0"
description = "Utilities for generating and evaluating datasets for PDF parsing performance."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.104.1",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2",
    "pymupdf4llm>=1.27.2",
    "pypdf>=6.12.1",
    "pdftotext>=3.0.0",
    "markitdown[all]>=0.1.5",
    "opendataloader-pdf>=2.4.1",
    "rapidfuzz>=3.14.5",
    "liteparse>=2.0.0",
]

[project.scripts]
lp-evaluate = "liteparse_eval.evaluation:main"
lp-process = "liteparse_eval.processing:main"
lp-benchmark = "liteparse_eval.benchmark:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
