[package]
name = "liteparse"
version = "2.0.0"
edition = "2024"

[[bin]]
name = "lit"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.55", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
infer = "0.19.0"
pdfium = { path = "../pdfium" }
pdfium-sys = { path = "../pdfium-sys" }
reqwest = { version = "0.13.3", features = ["blocking", "json", "form", "multipart"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tesseract-rs = { version = "0.2", features = ["build-tesseract"] }
tokio = { version = "1.52.3", features = ["full"] }
