[package]
name = "liteparse"
version = "2.5.1"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Fast, lightweight PDF and document parsing with spatial text extraction"
readme = "README.md"

[lib]
name = "liteparse"

[[bin]]
name = "lit"
path = "src/main.rs"

[features]
default = ["tesseract", "static-embed"]
tesseract = ["dep:tesseract-rs"]
# The model2vec static-embedding engine for schema extraction (EXTRACT_PLAN.md
# Phase 2). Default-on for native builds; binding crates (wasm/napi/python) use
# `default-features = false` and opt in when their extract surface lands.
# BM25-only extraction stays available without this feature.
static-embed = ["dep:tokenizers", "dep:safetensors"]

[dependencies]
blake3 = "1"
clap = { version = "4.5.55", features = ["derive"] }
file-format = { version = "0.29.0", features = ["reader"] }
image = { version = "0.25", default-features = false, features = ["png"] }
ordered-float = "5.3.0"
pdfium = { package = "liteparse-pdfium", version = "1.3.0", path = "../pdfium" }
pdfium-sys = { package = "liteparse-pdfium-sys", version = "1.3.0", path = "../pdfium-sys" }
reqwest = { version = "0.13.3", default-features = false, features = ["json", "form", "multipart", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
thiserror = "2"
tesseract-rs = { version = "0.2", features = ["build-tesseract"], optional = true }
tokio = { version = "1.52.3", features = ["rt", "macros", "sync", "time", "io-util"] }
url = "2"
web-time = "1.1.0"
safetensors = { version = "0.6", optional = true }
# default-features off drops the `onig` C regex backend (and hub/http extras);
# `fancy-regex` is the pure-Rust backend, keeping the build C-free.
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"], optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rmp = "0.8"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "fs", "process"] }

[dev-dependencies]
serial_test = "3"
