[package]
name = "liteparse-pdfium-sys"
version = "1.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Raw FFI bindings to PDFium for liteparse"
links = "pdfium"

[features]
default = []
bindgen = ["dep:bindgen"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
libloading = "0.8"

[build-dependencies]
bindgen = { version = "0.71", optional = true }
flate2 = "1"
tar = "0.4"
ureq = "3"
